<resources>
    <string name="app_name">野外调绘</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">新建用户</string>
    <string name="usermanager">用户管理</string>
    <string name="lookforuser">查看用户</string>
    <string name="title_activity_login">用户登录</string>

    <!-- Strings related to login -->
    <string name="putusername">请在此输入用户名</string>
    <string name="prompt_password">请在此输入密码 </string>
    <string name="action_sign_in">登  录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="rememberpassword">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="url">请在此输入URL链接</string>
    <string name="golbe">全图</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="undo">撤销</string>
    <string name="zhuji">注记</string>
    <string name="searchinfo">图上查看</string>
    <string name="cancel">返回</string>
    <string name="convert">导出</string>
    <string name="okbutton">创建</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saved">New feature saved</string>
    <string name="action_add">Add Feature</string>
    <string name="action_save">Save</string>
    <string name="action_discard">删除</string>
    <string name="action_delete">Delete Point</string>
    <string name="action_undo">撤销</string>
    <string name="title_add_point">点</string>
    <string name="title_add_polyline">线</string>
    <string name="title_add_polygon">面</string>
    <string name="title_feature_type">Select feature type</string>
    <string name="title_confirm_discard">Discard new feature</string>
    <string name="title_edit_failed">Saved failed</string>
    <string name="msg_confirm_discard">确定要放弃正在编辑的要素?</string>
    <string name="zoomin">缩小</string>
    <string name="zoomout">放大</string>
    <string name="localtion">本地位置</string>
    <string name="pthotodiscrable">照片名称</string>
    <string name="photolocation">照片描述</string>
    <string name="wifishare">开始WiFi传输</string>
    <string name="wifistop">停止WiFi传输</string>
    <string name="wifidistory">WiFi中断</string>

    <string name="FIDHINT">此FID唯一</string>
    <string name="FID">要素ID</string>
    <string name="BSM">标识码 </string>
    <string name="YSDM">要素代码 </string>
    <string name="DKBM">地块编码</string>
    <string name="DKMC">地块名称</string>
    <string name="SYQXZ">所有权性质</string>
    <string name="DKLB">地块类别</string>
    <string name="TDSYLX">土地使用类型</string>
    <string name="DLDJ">地力等级</string>
    <string name="TDYT">土地用途</string>
    <string name="SFJBNT">是否基本农田</string>
    <string name="SCMJ">实测面积</string>
    <string name="DKDZ">地块东至</string>
    <string name="DKNZ">地块南至</string>
    <string name="DKXZ">地块西至</string>
    <string name="DKBZ">地块北至</string>
    <string name="DKBZXX">地块备注信息</string>
    <string name="ZJRXM">指界人姓名</string>

    <string name="jumindi">居民地</string>
    <string name="daolu">交通设施</string>
    <string name="guanxian">管线设施</string>
    <string name="shuixi">水系设施</string>
    <string name="zhibei">植被园林</string>
    <string name="jingjiexian">境界线</string>
    <string name="dimaohetuzhi">地貌土质</string>
    <string name="mingchenghezhuji">文字注记</string>
    <string name="dulidiwu">独立地物</string>

    <string name="yibanfangwu">一般房屋</string>
    <string name="putongfangwu">普通房屋</string>
    <string name="teshufangwu">特殊房屋</string>
    <string name="fangwufushu">房屋附属</string>
    <string name="yuanshan">垣栅</string>
    <string name="zhizhudun">支柱墩</string>
    <string name="qita">其他</string>

    <string name="tielu">铁路</string>
    <string name="tielufushu">铁路附属</string>
    <string name="gonglu">公路</string>
    <string name="qitadaolu">其他道路</string>
    <string name="daolufushu">道路附属</string>
    <string name="qiaoliang">桥梁</string>
    <string name="dukoumatou">渡口码头</string>
    <string name="hangxingbiaozhi">航行标志</string>
    <string name="jigenglu">机耕路</string>
    <string name="xiangcunlu">乡村路</string>
    <string name="xiaolu">小路</string>
    <string name="neibudaolu">内部道路</string>

    <string name="guanxian1">管线</string>
    <string name="dianlixian">电力线</string>
    <string name="tongxunxian">通讯线</string>
    <string name="guandao">管道</string>
    <string name="dixiajianxiu">地下检修井</string>
    <string name="guandaofushu">管道附属</string>
    <string name="chengqiang">城墙</string>
    <string name="weiqiang">围墙</string>
    <string name="zhanlan">栅栏</string>
    <string name="tiesiwang">铁丝网</string>
    <string name="liba">篱笆</string>
    <string name="di">堤</string>

    <string name="heliu">河流溪流</string>
    <string name="hupo">湖泊</string>
    <string name="shuiku">水库</string>
    <string name="chitang">池塘</string>
    <string name="gouqu">沟渠</string>
    <string name="shuilisheshi">水利设施</string>
    <string name="ludiyaosu">陆地要素</string>
    <string name="haiyangyaosu">海洋要素</string>
    <string name="jiaoshi">礁石</string>
    <string name="shuiyuan">水源</string>
    <string name="zhaoze">沼泽</string>
    <string name="haianxian">海岸线</string>
    <string name="pubu">瀑布</string>
    <string name="shitan">石滩</string>
    <string name="douan">陡岸</string>

    <string name="senlin">森林</string>
    <string name="shulin">疏林</string>
    <string name="miaopu">苗圃</string>
    <string name="xiachangshumu">狭长树木</string>
    <string name="hangshu">行数</string>
    <string name="lingxingshu">零星树木</string>
    <string name="jingjilin">经济林</string>
    <string name="caodi">草地</string>
    <string name="gaocaodi">高草地</string>
    <string name="banhuangdi">半荒植物地</string>
    <string name="huangcaodi">荒草地</string>
    <string name="jingjizuowu">经济作物地</string>
    <string name="shuishengzuowu">水生作物地</string>
    <string name="gengdi">耕地</string>
    <string name="caidi">菜地</string>
    <string name="dileifanghuo">地类防火</string>
    <string name="yuanlin">园林</string>
    <string name="qitazhibei">其他植被</string>


    <string name="guojie">国界</string>
    <string name="guoneijie">国内各种境界</string>
    <string name="xingzhengjiexian">行政界线</string>
    <string name="qitajiexian">其他界线</string>

    <string name="ganhechuang">干河床</string>
    <string name="ganhehu">干涸湖</string>
    <string name="chonggou">冲沟</string>
    <string name="douya">陡崖</string>
    <string name="bengya">崩崖</string>
    <string name="huapo">滑坡</string>
    <string name="shangdong">山洞</string>
    <string name="rongdong">溶洞</string>
    <string name="rongyanloudou">熔岩漏斗</string>
    <string name="yanfeng">岩峰</string>
    <string name="tiidankan">梯田坎</string>
    <string name="shanai">山隘</string>
    <string name="doushishan">陡石山</string>
    <string name="luyandi">露岩地</string>
    <string name="shikuaidi">石块地</string>
    <string name="gebbitan">戈壁滩</string>
    <string name="yanjiandi">盐碱地</string>
    <string name="junlieidi">龟裂地</string>
    <string name="shadi">沙地</string>
    <string name="xueshan">雪山</string>


    <string name="kuangshankaicai">矿山开采</string>
    <string name="gongyesheshi">工业设施</string>
    <string name="nongyesheshi">农业设施</string>
    <string name="kewenweiti">科文卫体</string>
    <string name="gonggongsheshi">公共设施</string>
    <string name="beisudunting">碑塑墩亭</string>
    <string name="wenwuzongjiao">文物宗教</string>
    <string name="qitasheshi">其他设施</string>

    <string name="fwcs">房屋层数</string>
    <string name="fscz">房屋材质</string>
    <string name="fygz">房檐改正</string>
    <string name="bz">备注</string>

    <string name="dldj">道路等级</string>
    <string name="djdm">等级代码</string>
    <string name="dlmc">道路名称</string>
    <string name="dlxh">道路线号</string>
    <string name="cz">材质</string>
    <string name="fsss">附属设施</string>
    <string name="title_activity_featurelist">featurelist</string>

    <string name="diwubiaozhu">地物标注</string>
    <string name="wenzibiaozhu">文字标注</string>
    <string name="title_activity_fwselect">fwselect</string>
    <string name="title_activity_dlselect">dlselect</string>
    <string name="title_activity_sxselect">sxselect</string>

    <string name="sxname">水系名称</string>
    <string name="title_activity_zbselect">zbselect</string>
    <string name="title_activity_gxselect">gxselect</string>
    <string name="title_activity_dmselect">dmselect</string>
    <string name="title_activity_jjxselect">jjxselect</string>
    <string name="title_activity_dlzjselect">dlzjselect</string>
    <string name="title_activity_wzselect">wzselect</string>
    <string name="excelname">请在此输入导出excel名称</string>
    <string name="title_activity_convert_data_to_excel">ConvertDataToExcel</string>
    <string name="title_activity_featureslist">featureslist</string>

    <string name="start">开始录音</string>
    <string name="stop">停止录音</string>
    <string name="featurelist">要素类型列表</string>
    <string name="title_activity_newuser">新建用户</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="userlevel">用户等级</string>
    <string name="admin">管理员</string>
    <string name="ordinary">普通用户</string>
    <string name="title_activity_query">query</string>

    <string name="button_household">Average Household > 3.5</string>
    <string name="button_reset">Clear Graphics</string>
    <string name="navi">路径规划与导航</string>

    <!-- Service URL -->
    <string name="query_service">http://services.arcgisonline.com/ArcGIS/rest/services/Demographics/USA_Average_Household_Size/MapServer</string>
    <string name="title_activity_editfeature">地物编辑</string>
    <string name="title_activity_query2">queryActivity2</string>


</resources>
