<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <group android:checkableBehavior="single">
        <item android:id="@+id/drawdl"
            android:title="@string/daolu"
            app:showAsAction="always"/>

        <item android:id="@+id/drawtl"
            android:title="@string/tielu"
            app:showAsAction="always"/>

        <item android:id="@+id/drawgl"
            android:title="@string/gonglu"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/drawjgl"
            android:title="@string/jigenglu"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/drawxcl"
            android:title="@string/xiangcunlu"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/drawxl"
            android:title="@string/xiaolu"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/drawnbdl"
            android:title="@string/neibudaolu"
            app:showAsAction="ifRoom"/>
    </group>



</menu>
